Implement v0: Teddy SIMD + double-array trie Aho-Corasick
- Double-array trie Aho-Corasick automaton (BASE/CHECK/FAIL/OUTPUT)
- Teddy SIMD prefilter via jdk.incubator.vector, N=1/2/3 variants
- Auto-dispatch: Teddy for <=128 patterns, DAT fallback
- Multi-project build: core (published) + bench (JMH)
- 21 tests incl. scalacheck property tests verifying Teddy == DAT
- JMH benches vs hankcs/AhoCorasickDoubleArrayTrie and robert-bor/ahocorasick